--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-
+{"model": "Gemini", "role": "Coding Assistant", "gemini_api_key": "AIzaSyBpiKbK0nLq8x1Wm1I3Gn81u11v-MzmKqM", "api_key": "AIzaSyBpiKbK0nLq8x1Wm1I3Gn81u11v-MzmKqM", "email": {"email": "radhikayash2@gmail.com", "password": "lovdyyayevrtwzil", "smtp_server": "smpt.gmail.com", "smtp_port": 587, "imap_server": "imap.gmail.com", "imap_port": 993}}
